--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "jsonfile": "^4.0.0",
     "pg": "^7.4.0",
     "pug": "^2.0.0-rc.4",
+    "readline": "^1.3.0",
     "sequelize": "^4.28.5",
     "sql-template-strings": "^2.2.2"
   }
