--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "spottr_app",
+  "name": "postgress",
   "version": "1.0.0",
-  "description": "collaboration project w/ ux/ui designers",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/BigBoss119/spottr_app.git"
-  },
+  "bugs": {
+      "url": "https://github.com/BigBoss119/spottr_app/issues"
+    },  
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/BigBoss119/spottr_app/issues"
-  },
-  "homepage": "https://github.com/BigBoss119/spottr_app#readme",
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "multer": "^1.3.0",
+    "nodemon": "^1.12.1",
+    "pg": "^7.4.0",
     "jsonfile": "^4.0.0",
     "pg": "^7.4.0",
     "pug": "^2.0.0-rc.4",
     "readline": "^1.3.0",
     "sequelize": "^4.28.5",
-    "sql-template-strings": "^2.2.2"
-  }
+    "sql-template-strings": "^2.2.2"    
+  },
+  "devDependencies": {},
+  "description": ""
 }
