--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonfile": "^4.0.0",
     "multer": "^1.3.0",
     "nodemon": "^1.12.1",
+    "npm-install-all": "^1.1.21",
     "pg": "^7.4.0",
     "pug": "^2.0.0-rc.4",
     "readline": "^1.3.0",
